--- a/css/Template3.css
+++ b/css/Template3.css
@@ -206,8 +206,7 @@ nav .mega.container{
     visibility: hidden;
 }
 
-nav > ul li:last-of-type:hover + .mega.container,
-nav .container:hover{
+nav > ul li:last-of-type:hover + .mega.container{
     opacity: 1;
     top: 103%;
     visibility: visible;
