--- a/css/Template3.css
+++ b/css/Template3.css
@@ -151,14 +151,22 @@ nav > ul {
     font-size: 18px;
 }
 
-nav > ul > li {
+nav > ul > li > a{
     display: block;
     padding: 20px;
     position: relative;
 }
 
+/* nav > ul > li:last-of-type {
+    position: static;
+} */
 
-nav > ul > li::before {
+/* nav > ul > li:last-of-type a {
+    position: relative;
+} */
+
+
+nav > ul > li > a::before {
     content: "";
     position: absolute;
     background-color: var(--main-color);
@@ -169,13 +177,23 @@ nav > ul > li::before {
     transition: 0.3s;
 }
 
+nav > ul > li > a::before {
+    width: 0%;
+    top: 0;
+    left: 0;
+}
+
+
 nav > ul > li:hover {
     background-color: var(--background-color);
 }
 
-nav > ul > li:hover::before {
+
+
+nav > ul > li > a:hover::before {
     width: 100%;
 }
+
 
 nav  ul  li a {
     text-decoration: none;
@@ -193,9 +211,9 @@ nav  ul  li a {
 
 nav .mega.container{
     position: absolute;
-    width: 100%;
     left: 0;
     top: 150%;
+    width: 100%;
     background-color: white;
     border-bottom: 3px solid var(--main-color);
     transition:top 0.3s,  opacity 0.3s;
@@ -206,7 +224,8 @@ nav .mega.container{
     visibility: hidden;
 }
 
-nav > ul li:last-of-type:hover + .mega.container{
+
+nav > ul > li:hover .mega.container{
     opacity: 1;
     top: 103%;
     visibility: visible;
